# logos-execution-zone

./: .dockerignore  Cargo.toml  README.md  docker-compose.override.yml
.github/workflows/: ci.yml
bedrock/: test_entropy
bedrock_client/src/: lib.rs
common/: Cargo.toml
common/src/: block.rs  config.rs  error.rs  lib.rs  sequencer_client.rs  test_utils.rs  transaction.rs
completions/: README.md
completions/bash/: wallet
completions/zsh/: _wallet
docs/: general-calls-via-tail-c-calls.md
docs/LEZ testnet v0.1 tutorials/: associated-token-accounts.md
examples/program_deployment/: run_demo_capabilities.sh
explorer_service/: Dockerfile
explorer_service/src/: api.rs  format_utils.rs  main.rs
indexer/core/: Cargo.toml
indexer/service/: Dockerfile  docker-compose.yml
integration_tests/: Cargo.toml
integration_tests/src/: config.rs  lib.rs
integration_tests/tests/: ata.rs  indexer.rs  keys_restoration.rs  token.rs  tps.rs  wallet_ffi.rs
key_protocol/: Cargo.toml
mempool/src/: lib.rs
nssa/: Cargo.toml
nssa/src/: base64.rs  error.rs  lib.rs  program.rs  state.rs
program_methods/guest/: Cargo.toml
programs/associated_token_account/: Cargo.toml
sequencer/core/: Cargo.toml
sequencer/service/: Cargo.toml  Dockerfile  docker-compose.yml
sequencer/service/rpc/: Cargo.toml
sequencer/service/rpc/src/: lib.rs
sequencer_core/src/: block_settlement_client.rs  block_store.rs  lib.rs
sequencer_rpc/src/: lib.rs  process.rs
sequencer_runner/src/: lib.rs
storage/src/: error.rs  indexer.rs  lib.rs  sequencer.rs
wallet/: Cargo.toml
(+107 files in other folders)
