[package]
name = "sequencer_service_rpc"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
common.workspace = true
nssa.workspace = true
nssa_core.workspace = true

jsonrpsee = { workspace = true, features = ["macros"] }
serde_json.workspace = true
schemars.workspace = true

[features]
client = ["jsonrpsee/client"]
server = ["jsonrpsee/server"]
